--- a/.gitignore
+++ b/.gitignore
@@ -31,4 +31,18 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
+/.yardoc
+/_yardoc/
+/coverage/
+/doc/
+/pkg/
+/spec/reports/
+
+/.rspec_status
+/.byebug_history
+
 /.idea/
+/.env.*.local
+/.env.local
+
+local_data/
